--- a/packages/libs/utils/package.json
+++ b/packages/libs/utils/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@org/ci-change-entry-point": "workspace:*",
     "@tsconfig/node22": "catalog:",
+    "@types/node": "catalog:",
     "rimraf": "catalog:",
     "typescript": "catalog:"
   }
