--- a/packages/libs/errors/package.json
+++ b/packages/libs/errors/package.json
@@ -17,5 +17,8 @@
         "rimraf": "catalog:",
         "tsx": "catalog:",
         "typescript": "catalog:"
+    },
+    "dependencies": {
+        "http-status-codes": "catalog:"
     }
 }
