--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -29,6 +29,9 @@ catalog:
   express: ^5.1.0
   globals: ^16.4.0
   helmet: ^8.1.0
+  http-status-codes: ^2.3.0
+  husky: ^9.1.7
+  is-ci: ^4.1.0
   json-colorizer: ^3.0.1
   lodash-es: ^4.17.21
   rimraf: ^6.0.1
