--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -36,7 +36,7 @@ catalog:
   lodash-es: ^4.17.21
   rimraf: ^6.0.1
   safe-stable-stringify: ^2.5.0
-  tsx: ^4.20.6
+  tsx: 4.20.6
   typescript: ^5.9.3
   typescript-eslint: ^8.46.0
   winston: ^3.18.3
