--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,14 @@
       "pattern": "./packages/scripts/**/*"
     },
   ],
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "files.watcherExclude": {
+    "**/routeTree.gen.ts": true
+  },
+  "search.exclude": {
+    "**/routeTree.gen.ts": true
+  },
+  "files.readonlyInclude": {
+    "**/routeTree.gen.ts": true
+  },
+  "typescript.tsdk": "node_modules/typescript/lib",
 }
